# tv-robot-app

./: Cargo.toml  README.md
docs/: index.html
icons/: icon.icns
public/: index.html
src/: main.rs  menubar.rs  server.rs
